--- a/Code/templates/model.html
+++ b/Code/templates/model.html
@@ -1,53 +1,14 @@
 <html>
-<head>
-<script src="../static/js/jquery-3.4.1.min.js"></script>
-</head>
-<style>
-.nav {
-    width:35px;
-    height:35px;
-    line-height: 35px;
-    text-align: center;
-    border:1px solid #7B7B7B;
-    float:left;
-}
-.content{
-    width:100;
-    margin:0 auto;
- }
-
-#tip{
-    width:200px;
- }
-
-.m{
-    background-color: #0066cc;
-}
-
-</style>
-<body>
-<div class ="content">
-<div id = "tip">
-<div class = "nav">1</div><div class = "nav">2</div><div class = "nav">3</div><div class = "nav">4</div><div class = "nav">5</div>
-<button style = "width:65px; height:30px; margin-top: 20px;margin-left: 50px;">提交</button>
-</div>
-</div>
-
-</body>
-<script type="text/javascript">
-$(document).ready(function(){
-    $(".nav").click(function(){
-    if ($(this).hasClass("m")) {
-        $(this).removeClass("m");
-    }else{
-        $(this).addClass("m");
-    }
-    });
-
-    $('button').click(function(){
-        var val = $('.m').text();
-        alert(val);
-    });
-});
-</script>
+  <head>
+    <title>Video Streaming Demonstration</title>
+  </head>
+  <body>
+    <h1>Video Streaming Demonstration</h1>
+    <div onclick="alert ('success')">
+    <img src="{{ url_for('video_feed') }}" width="100%">
+    </div>
+    <div onclick="alert ('success')">
+    <img src="{{ url_for('video_feed') }}" width="100%">
+    </div>
+  </body>
 </html>
