--- a/Code/templates/testStart.html
+++ b/Code/templates/testStart.html
@@ -67,7 +67,7 @@
                 <a class="nav-link pl-lg-0" href="/">Home </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/books"> Books</a>
+                <a class="nav-link" href="/books"> Device</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/test">Test</a>
