--- a/Code/templates/testStart.html
+++ b/Code/templates/testStart.html
@@ -70,7 +70,7 @@
                 <a class="nav-link" href="/books"> Device</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/test">Test</a>
+                <a class="nav-link" href="/test">Zone</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/statistics"> Statistics </a>
