--- a/Code/templates/validation.html
+++ b/Code/templates/validation.html
@@ -53,7 +53,7 @@
                 <a class="nav-link" href="/books"> Device</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="/test">Test</a>
+                <a class="nav-link" href="/test">Zone</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/statistics"> Statistics </a>
