--- a/Code/templates/test.html
+++ b/Code/templates/test.html
@@ -94,83 +94,18 @@
       <div class="container ">
         <div class="heading_container heading_center">
           <h2>
-            Books Categories
+            Video Streaming Demonstration
           </h2>
-          <p>
-            选择一个类别，点击按钮开始测试
-          </p>
         </div>
         <div class="row">
-          <div class="col-sm-6 col-md-4 ">
-            <div class="box ">
-              <div class="img-box selected" value="random">
-                <img src="/static/images/cat1.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h5 id="random" >
-                  随机
-                </h5>
-              </div>
+          <div class="col-md-6">
+            <div onclick="alert ('success')">
+              <img src="{{ url_for('video_feed') }}" width="100%">
             </div>
           </div>
-          <div class="col-sm-6 col-md-4 ">
-            <div class="box ">
-              <div class="img-box" value="figure">
-                <img src="/static/images/cat2.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h5 id="figure">
-                  人物形象
-                </h5>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4 ">
-            <div class="box ">
-              <div class="img-box" value="writer">
-                <img src="/static/images/cat3.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h5 id="writer">
-                  作者
-                </h5>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4 ">
-            <div class="box ">
-              <div class="img-box" value="main">
-                <img src="/static/images/cat4.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h5 id="main">
-                  主旨
-                </h5>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4 ">
-            <div class="box ">
-              <div class="img-box" value="content">
-                <img src="/static/images/cat5.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h5 id="content">
-                  情节
-                </h5>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-md-4 ">
-            <div class="box ">
-              <div class="img-box" value="detail">
-                <img src="/static/images/cat6.png" alt="">
-              </div>
-              <div class="detail-box">
-                <h5 id="detail">
-                  细节
-                </h5>
-              </div>
+          <div class="col-md-6">
+            <div onclick="alert ('success')">
+              <img src="{{ url_for('video_feed') }}" width="100%">
             </div>
           </div>
         </div>
