--- a/Code/templates/index.html
+++ b/Code/templates/index.html
@@ -1,13 +1,258 @@
 <html>
 
 <head>
-  <title>摄像头视频流</title>
+  <!-- Basic -->
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <!-- Mobile Metas -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <!-- Site Metas -->
+  <link rel="icon" href="static/images/favicon.png" type="image/gif" />
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <meta name="author" content="" />
+
+  <title>SafeHome</title>
+
+  <!-- bootstrap core css -->
+  <link rel="stylesheet" type="text/css" href="static/css/bootstrap.css" />
+  <!-- font awesome style -->
+  <link href="static/css/font-awesome.min.css" rel="stylesheet" />
+
+  <!-- Custom styles for this template -->
+  <link href="static/css/style.css" rel="stylesheet" />
+  <!-- responsive style -->
+  <link href="static/css/responsive.css" rel="stylesheet" />
+  <script src="https://cdn.bootcss.com/echarts/4.8.0/echarts.js"></script>
+
 </head>
 
 <body>
-  <h1>摄像头视频流</h1>
-  <!-- 使用img标签显示视频流，src属性指向/video_feed路径 -->
-  <h1> <img src="{{ url_for('video_feed_1') }}"><img src="{{ url_for('video_feed_2') }}"></h1>
+  <div class="hero_area">
+    <!-- header section strats -->
+    <header class="header_section">
+      <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg custom_nav-container ">
+          <a class="navbar-brand" href="/">
+            <span>
+              SafeHome
+            </span>
+          </a>
+
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class=""> </span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link pl-lg-0" href="/"> Home </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/surveillance"> Surveillance</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/statistics"> Statistics </a>
+              </li>
+            </ul>
+          </div>
+        </nav>
+      </div>
+    </header>
+    <!-- end header section -->
+
+    <!-- main section -->
+
+
+    <section class="slider_section ">
+      <div id="customCarousel1" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <!-- 对应#1 intro -->
+          <div class="carousel-item active">
+            <div class="container ">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="detail-box">
+                    <h5>
+                      SafeHome
+                    </h5>
+                    <section class="blog_section layout_padding">
+                      <div class="container ">
+                        <div class="row">
+                          <div class="g-container">
+                            <div id="start" class="g-progress" style="--progress: {{percentage}}%"></div>
+                          </div>
+                        </div>
+                      </div>
+                    </section>
+                    <h2>
+                      Temperature in your home is {{temperature}}℃
+                    </h2>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="img-box">
+                    <img src="static/images/safehome.png"  alt="">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- 对应#2 test -->
+          <div class="carousel-item">
+            <div class="container ">
+              <div class="row">
+                <div class="col-md-6">
+                  <div class="detail-box">
+                    <h5>
+                      SafeHome
+                    </h5>
+                    <h1>
+                      Look at your home surveillance.
+                    </h1>
+                    <a href="/surveillance">
+                      suerveillance
+                    </a>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="img-box">
+                    <img src="static/images/slider-img.png" alt="">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="carousel_btn_box">
+          <a class="carousel-control-prev" href="#customCarousel1" role="button" data-slide="prev">
+            <i class="fa fa-angle-left" aria-hidden="true"></i>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#customCarousel1" role="button" data-slide="next">
+            <i class="fa fa-angle-right" aria-hidden="true"></i>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <!-- end main section -->
+
+
+
+
+  </div>
+
+
+  <section class="info_section layout_padding2">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 col-lg-3 info-col">
+          <div class="info_detail">
+            <h4>
+              About Us
+            </h4>
+            <p>
+              Contact us on these social-medias.
+            </p>
+            <div class="info_social">
+              <a href="https://www.facebook.com/profile.php?id=100064520177692">
+                <i class="fa fa-facebook" aria-hidden="true"></i>
+              </a>
+              <a href="https://user.qzone.qq.com/2287245796">
+                <i class="fa fa-qq" aria-hidden="true"></i>
+              </a>
+              <a href="https://github.com/Achinoise1">
+                <i class="fa fa-github" aria-hidden="true"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3 info-col">
+          <div class="info_contact">
+            <h4>
+              Address
+            </h4>
+            <div class="contact_link_box">
+              <a href="https://www.zstu.edu.cn/">
+                <i class="fa fa-university" aria-hidden="true"></i>
+                <span>
+                  ZSTU
+                </span>
+              </a>
+
+              <a href="https://github.com/Casta-mere/Safehome">
+                <i class="fa fa-github" aria-hidden="true"></i>
+                <span>
+                  View our Github page
+                </span>
+              </a>
+              <a href="" style="pointer-events : none">
+                <i class="fa fa-phone" aria-hidden="true"></i>
+                <span>
+                  Call +86 13834230484
+                </span>
+              </a>
+              <a href="" style="pointer-events : none">
+                <i class="fa fa-address-book-o" aria-hidden="true"></i>
+                <span>
+                  E-mail castamego@gmail.com
+                </span>
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3 info-col">
+          <div class="info_contact">
+            <h4>
+              Newsletter
+            </h4>
+            <form action="#">
+              <input type="text" placeholder="Enter email" />
+              <button type="submit" onclick="subscribe()">
+                Subscribe
+              </button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- end info section -->
+
+  <!-- footer section -->
+  <footer class="footer_section">
+    <div class="container">
+      <p>
+        &copy; <span id="displayYear"></span> All Rights Reserved By
+        <a href="https://github.com/Casta-mere">Castamere</a>
+      </p>
+    </div>
+  </footer>
+  <!-- footer section -->
+  <script>
+    function subscribe() {
+      alert("Subscribe Success!");
+    }
+  </script>
+  <!-- jQery -->
+  <script src="static/js/jquery-3.4.1.min.js"></script>
+  <!-- bootstrap js -->
+  <script src="static/js/bootstrap.js"></script>
+  <!-- custom js -->
+  <script src="static/js/custom.js"></script>
+  <!--进度条动画-->
+  <script>
+    $(function () {
+      /*$('#start').attr('value')*/
+      $("#start").animate({
+        width: "100%"   /*传进来*/
+      }, 1000);
+    });
+  </script>
 </body>
 
 </html>
