--- a/Code/templates/profile.html
+++ b/Code/templates/profile.html
@@ -88,9 +88,9 @@
                         <br>
                         <br>
                         <div class="btn-box">
-                            <a href="/statistics">
+                            <a href="/alert">
                                 <button>
-                                    Logout
+                                    Alert
                                 </button>
                             </a>
                         </div>
